# dusklight

./: .gitignore  CMakeLists.txt  CMakePresets.json  files.cmake
.github/workflows/: build.yml
cmake/: AndroidExports.cmake  AppleExports.cmake  DuskGameABI.cmake  DuskModSDK.cmake  DuskSymbolManifest.cmake  DuskVersion.cmake  DuskWindowsExports.cmake  ModSDK.cmake  SymbolManifest.cmake  WindowsExports.cmake
cmake/mod_sdk/: pseudo_reloc.cpp
docs/: modding.md
include/: global.h
include/SSystem/SComponent/: c_bg_s_shdw_draw.h  c_xyz.h
include/Z2AudioLib/: Z2AudioMgr.h  Z2SeqMgr.h  Z2SoundObjMgr.h  Z2SoundObject.h
include/d/: d_a_item_static.h  d_a_shop_item_static.h  d_attention.h  d_bg_s_acch.h  d_cc_s.h  d_com_inf_game.h  d_event_manager.h  d_file_sel_info.h  d_file_select.h  d_item.h  d_kankyo.h  d_menu_ring.h  d_meter2_draw.h  d_meter2_info.h  d_msg_flow.h  d_particle.h  d_resorce.h  d_save.h  d_stage.h  d_vibration.h
include/d/actor/: d_a_alink.h  d_a_obj_life_container.h
include/dusk/: action_bindings.h  config.hpp  config_var.hpp  control_layout.hpp  gx_helper.h  hook.hpp  hook_system.hpp  main.h  menu_pointer.h  mod_api.h  mod_loader.hpp  mod_utils.h  profiling.hpp  settings.h  texture_replacements.hpp  touch_camera.h
include/dusk/mods/: flow.hpp  gfx_stages.hpp  item_checks.hpp  save.hpp  stage.hpp  text.hpp
include/f_op/: f_op_actor.h  f_op_actor_mng.h
include/f_pc/: f_pc_node_req.h
include/m_Do/: m_Do_audio.h  m_Do_controller_pad.h  m_Do_hostIO.h
include/mods/: api.h  hook.hpp  service.hpp
include/mods/svc/: camera.h  config.h  flow.h  game.h  game_code.h  gfx.h  hook.h  host.h  item.h  log.h  overlay.h  resource.h  save.h  stage.h  text.h  texture.h  ui.h
res/rml/: mods.rcss  tabbing.rcss  touch_controls.rcss  window.rcss
sdk/: CMakeLists.txt
src/Z2AudioLib/: Z2AudioMgr.cpp  Z2SceneMgr.cpp  Z2SoundObject.cpp
src/c/: c_dylink.cpp
src/d/: d_a_shop_item_static.cpp  d_camera.cpp  d_com_inf_game.cpp  d_drawlist.cpp  d_event_manager.cpp  d_file_sel_info.cpp  d_file_select.cpp  d_item.cpp  d_kankyo.cpp  d_kankyo_rain.cpp  d_map_path.cpp  d_menu_dmap.cpp  d_menu_fmap2D.cpp  d_menu_map_common.cpp  d_menu_option.cpp  d_menu_ring.cpp  d_menu_save.cpp  d_meter2.cpp  d_meter2_draw.cpp  d_meter2_info.cpp  d_meter_map.cpp  d_msg_class.cpp  d_msg_flow.cpp  d_msg_object.cpp  d_resorce.cpp  d_s_logo.cpp  d_save.cpp  d_shop_system.cpp  d_stage.cpp
src/d/actor/: d_a_alink_demo.inc  d_a_alink_effect.inc  d_a_alink_link.inc  d_a_alink_wolf.inc  d_a_b_ds.cpp  d_a_demo_item.cpp  d_a_e_hp.cpp  d_a_e_po.cpp  d_a_e_rdb.cpp  d_a_e_th_ball.cpp  d_a_mant.cpp  d_a_mg_rod.cpp  d_a_npc_aru.cpp  d_a_npc_ashB.cpp  d_a_npc_chin.cpp  d_a_npc_fairy.cpp  d_a_npc_gra.cpp  d_a_npc_gro.cpp  d_a_npc_grr.cpp  d_a_npc_grs.cpp  d_a_npc_impal.cpp  d_a_npc_ins.cpp  d_a_npc_kkri.cpp  d_a_npc_len.cpp  d_a_npc_maro.cpp  d_a_npc_myna2.cpp  d_a_npc_pouya.cpp  d_a_npc_prayer.cpp  d_a_npc_rafrel.cpp  d_a_npc_the.cpp  d_a_npc_uri.cpp  d_a_npc_ykw.cpp  d_a_npc_zra.inc  d_a_npc_zrc.cpp  d_a_npc_zrz.cpp  d_a_obj_item.cpp  d_a_obj_life_container.cpp  d_a_obj_shield.cpp  d_a_obj_sword.cpp  (+8 more)
src/dusk/: action_bindings.cpp  autosave.cpp  config.cpp  gx_helper.cpp  hook_system.cpp  io.cpp  launcher_win32.cpp  layout.cpp  main.cpp  menu_pointer.cpp  mod_loader.cpp  mouse.cpp  settings.cpp  speedrun.cpp  texture_replacements.cpp
src/f_ap/: f_ap_game.cpp
src/f_op/: f_op_actor.cpp  f_op_actor_mng.cpp  f_op_scene_mng.cpp  f_op_scene_req.cpp
src/f_pc/: f_pc_base.cpp  f_pc_create_req.cpp  f_pc_draw.cpp  f_pc_manager.cpp  f_pc_node_req.cpp  f_pc_stdcreate_req.cpp
src/m_Do/: m_Do_MemCard.cpp  m_Do_audio.cpp  m_Do_controller_pad.cpp  m_Do_graphic.cpp  m_Do_main.cpp
tools/ao_mod/: CMakeLists.txt  mod.json
tools/cat_mod/: CMakeLists.txt  mod.json
tools/crt_mod/: CMakeLists.txt  mod.json
tools/mod_template/: CMakeLists.txt
tools/mod_template/src/: mod.cpp
tools/mod_test/: CMakeLists.txt  mod.json
tools/mod_test_dep/: CMakeLists.txt  mod.json
tools/randomizer/: CMakeLists.txt  PORTING.md  mod.json  randomizer.cmake
tools/randomizer/assets/textures/: shadow_crystal.bti
tools/randomizer/generator/: randomizer.cpp  randomizer.hpp
tools/randomizer/generator/data/: entrance_shuffle_data.yaml  flow_patches.yaml  items.yaml  locations.yaml  macros.yaml  object_patches.yaml  settings_list.yaml  startflags.yaml
tools/randomizer/generator/data/text/: text_overrides.yaml
tools/randomizer/generator/data/text/languages/: english.yaml  french.yaml  german.yaml  italian.yaml  spanish.yaml
tools/randomizer/generator/data/world/dungeons/: City in the Sky.yaml
tools/randomizer/generator/data/world/overworld/: Eldin Province.yaml  Faron Province.yaml  Gerudo Desert.yaml  Lanayru Province.yaml  Ordona Province.yaml  Snowpeak Province.yaml
tools/randomizer/generator/logic/: area.cpp  entrance_shuffle.cpp  entrance_shuffle.hpp  fill.cpp  hints.cpp  hints.hpp  item_pool.cpp  item_pool.hpp  location.cpp  location.hpp  requirement.cpp  search.hpp  spoiler_log.cpp  world.cpp  world.hpp
tools/randomizer/generator/seedgen/: config.cpp  config.hpp  packed_bits.hpp  seed.cpp  settings.cpp  settings.hpp
tools/randomizer/generator/utility/: base64pp.hpp  crc32.hpp  file.cpp  text.cpp  text.hpp
tools/randomizer/src/: hooks.cpp  hooks.hpp  mod.cpp  paths.cpp  paths.hpp  seed_session.cpp  seed_session.hpp
tools/randomizer/src/game/: assets.cpp  assets.hpp  flags.cpp  flags.h  game_helpers.hpp  item_data.cpp  item_data.hpp  item_funcs.cpp  item_funcs.hpp  item_ids.hpp  layer_resolver.cpp  layer_resolver.hpp  messages.cpp  messages.hpp  randomizer_context.cpp  randomizer_context.hpp  save_setup.cpp  save_setup.hpp  tools.cpp  tools.h  verify_item_functions.cpp
tools/randomizer/src/imgui/: ImGuiMenuRandomizer.cpp
tools/randomizer/src/ui/: config_store.cpp  config_store.hpp  rando_config.cpp  rando_config.hpp  rando_seed_generation.cpp  rando_seed_generation.hpp  ui.cpp  ui.hpp
tools/shadow_mod/: CMakeLists.txt  mod.json
tools/symgen/: Cargo.toml
tools/symgen/src/: main.rs  manifest.rs
(+133 files in other folders)
