[package]
name = "dusk-symgen"
version = "0.1.0"
edition = "2021"
description = "Dusklight symbol pipeline: generates the curated Windows .def (and later, the symbol manifest) from built objects"

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "archive", "coff", "elf", "macho", "std"] }
pdb = "0.8"

[profile.release]
strip = true
